--- a/src/app.css
+++ b/src/app.css
@@ -17,3 +17,10 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Oswald';
+	src: url('/fonts/oswald.woff2') format('woff2'), url('/fonts/oswald.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
