some speed improvements

--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 		url('/fonts/cheap-pine-sans.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
-	font-cheap-pine: swap;
+	font-display: swap;
 }
 
 @font-face {
@@ -17,7 +17,7 @@
 		url('/fonts/cheap-pine-regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
-	font-cheap-pine: swap;
+	font-display: swap;
 }
 
 @font-face {
@@ -25,5 +25,5 @@
 	src: url('/fonts/oswald.woff2') format('woff2'), url('/fonts/oswald.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
-	font-cheap-pine: swap;
+	font-display: swap;
 }
