--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,8 @@
 
 @font-face {
 	font-family: 'Cheap Pine Sans';
-	src: url('/fonts/cheap-pine-sans.woff2') format('woff2'),
+	src:
+		url('/fonts/cheap-pine-sans.woff2') format('woff2'),
 		url('/fonts/cheap-pine-sans.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
@@ -13,7 +14,8 @@
 
 @font-face {
 	font-family: 'Cheap Pine Regular';
-	src: url('/fonts/cheap-pine-regular.woff2') format('woff2'),
+	src:
+		url('/fonts/cheap-pine-regular.woff2') format('woff2'),
 		url('/fonts/cheap-pine-regular.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
@@ -22,7 +24,9 @@
 
 @font-face {
 	font-family: 'Oswald';
-	src: url('/fonts/oswald.woff2') format('woff2'), url('/fonts/oswald.woff') format('woff');
+	src:
+		url('/fonts/oswald.woff2') format('woff2'),
+		url('/fonts/oswald.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 	font-display: swap;
